# hoi4_worldgen

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  map.rs
src/components/: adjacency.rs  airport.rs  building.rs  city.rs  color.rs  continent.rs  day_month.rs  default_map.rs  mod.rs  prelude.rs  province.rs  railway.rs  rocket_site.rs  season.rs  state.rs  strategic_region.rs  supply_node.rs  unit_stack.rs  weather_position.rs  wrappers.rs
src/ui/: central_panel_renderer.rs  control_panel_renderer.rs  map_loader.rs  map_mode.rs  map_textures.rs  mod.rs  right_panel_renderer.rs  root_path.rs  selection.rs  top_menu_renderer.rs  viewport.rs
test/: airports.txt  railways.txt  supply_nodes.txt
test/map/: adjacencies.csv  adjacency_rules.txt  buildings.txt  cities.txt  colors.txt  definition.csv  rocketsites.txt  seasons.txt  weatherpositions.txt
test/strategicregions/: 10-StrategicRegion.txt  100-StrategicRegion.txt  101-StrategicRegion.txt  102-StrategicRegion.txt  103-StrategicRegion.txt  106-StrategicRegion.txt  107-StrategicRegion.txt  11-StrategicRegion.txt  110-StrategicRegion.txt  113-StrategicRegion.txt  114-StrategicRegion.txt  116-StrategicRegion.txt  12-StrategicRegion.txt  120-StrategicRegion.txt  122-StrategicRegion.txt  126-StrategicRegion.txt  128-StrategicRegion.txt  129-StrategicRegion.txt  130-StrategicRegion.txt  132-StrategicRegion.txt  134-StrategicRegion.txt  135-StrategicRegion.txt  136-StrategicRegion.txt  138-StrategicRegion.txt  139-StrategicRegion.txt  14-StrategicRegion.txt  141-StrategicRegion.txt  142-StrategicRegion.txt  (+62 more)
(+986 files in other folders)
