[package]
name = "world_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
derive_more = "0.99.17"
serde = { version = "1.0.140", features = ["derive"] }
jomini = "0.19.1"
image = "0.24.3"
thiserror = "1.0.31"
log = "0.4.17"
env_logger = "0.9.0"